View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023618 | Open CASCADE | OCCT:Tests | public | 2012-12-05 11:56 | 2013-04-29 15:21 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.6.0 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023618: Some tests get killed just because of wrong cpulimit setting | ||||
Description | Some tests exit prematurely (hence interpreted as FAILED or BAD) just because of wrong value of cpulimit set in the script. Example is test bugs moddata bug54: - in vc11 is killed and treated as BAD due to TODO "TEST INCOMPLETE" - in vc9 is able to finish and gets reported as IMPROVEMENT | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
The fix is pushed to branch CR23618, please review. Please check compilation on Linux and whether dying message appears when test is killed by cpulimit. |
|
Dear BugMaster, Branch CR23618 (and products from GIT master) was compiled on Linux and Windows platforms. There are compilation errors on Linux: ../../../src/Draw/Draw_BasicCommands.cxx:319: error: expected initializer before 'CpuFunc' ../../../src/Draw/Draw_BasicCommands.cxx:344: error: 'CpuFunc' was not declared in this scope |
|
Corrected, please check |
|
Dear BugMaster, Branch CR23618 (and products from GIT master) was compiled on Linux and Windows platforms and tested. There is compilation error on Linux: ../../../src/Draw/Draw_BasicCommands.cxx: In function 'void CpuFunc(int)': ../../../src/Draw/Draw_BasicCommands.cxx:321: error: 'CPU_LIMIT' was not declared in this scope |
|
Fix pushed to CR23618, please test |
|
Dear BugMaster, Branch CR23618 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: Not needed |
|
Branch CR23618 is rebased on current master |
occt: master a60b9727 2012-12-14 13:30:40
Committer: abv Details Diff |
0023618: Some tests get killed just because of wrong cpulimit setting Cpulimit increased in tests bugs moddata bug54 and boolean bsection N4 for tests to pass on slower systems. Cpulimit command now should print a dying message when it kills process. |
Affected Issues 0023618 |
|
mod - src/Draw/Draw_BasicCommands.cxx | Diff File | ||
mod - tests/boolean/bsection/N4 | Diff File | ||
mod - tests/bugs/moddata/bug54 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-12-05 11:56 |
|
New Issue | |
2012-12-05 11:56 |
|
Assigned To | => mkv |
2012-12-05 13:31 |
|
Note Added: 0022568 | |
2012-12-05 13:31 |
|
Assigned To | mkv => apn |
2012-12-05 13:31 |
|
Status | new => resolved |
2012-12-05 18:18 |
|
Assigned To | apn => mkv |
2012-12-06 11:10 |
|
Note Added: 0022582 | |
2012-12-06 11:10 |
|
Assigned To | mkv => abv |
2012-12-06 11:10 |
|
Status | resolved => assigned |
2012-12-06 13:16 |
|
Note Added: 0022588 | |
2012-12-06 13:16 |
|
Assigned To | abv => mkv |
2012-12-06 13:16 |
|
Status | assigned => resolved |
2012-12-07 11:48 |
|
Note Added: 0022617 | |
2012-12-07 11:49 |
|
Assigned To | mkv => abv |
2012-12-07 11:49 |
|
Status | resolved => assigned |
2012-12-07 13:27 |
|
Note Added: 0022621 | |
2012-12-07 13:27 |
|
Assigned To | abv => mkv |
2012-12-07 13:27 |
|
Status | assigned => resolved |
2012-12-07 13:28 |
|
Status | resolved => reviewed |
2012-12-11 18:00 |
|
Note Added: 0022654 | |
2012-12-11 18:01 |
|
Test case number | => Not needed |
2012-12-11 18:01 |
|
Assigned To | mkv => bugmaster |
2012-12-11 18:01 |
|
Status | reviewed => tested |
2012-12-14 18:17 |
|
Note Added: 0022711 | |
2012-12-18 10:45 |
|
Changeset attached | => occt master a60b9727 |
2012-12-18 10:45 |
|
Assigned To | bugmaster => abv |
2012-12-18 10:45 |
|
Status | tested => verified |
2012-12-18 10:45 |
|
Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |